# ochi

./: .gitignore  Cargo.toml  README.md
crates/tricore-disasm/: Cargo.toml
crates/tricore-disasm-gui/: Cargo.toml
crates/tricore-disasm-gui/src/: main.rs
crates/tricore-disasm/src/: analyze.rs  lib.rs  main.rs  model.rs
docs/design/: disasm-gui.md  disasm.md
examples/: 00-basic.asm  01-call.asm  02-calla.asm  03-bubblesort.asm
scripts/: run_examples.sh
spec/: tricore_tc162_iset.txt
src/: cpu.rs  decoder.rs  disasm.rs  exec.rs  instructions.rs  lib.rs  memory.rs
src/isa/: tc16.rs
tests/: abs.rs  addr.rs  branches.rs  call.rs  disasm.rs  logic.rs  mapping.rs  memory.rs  smoke.rs
