[package]
name = "tricore-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["You <you@example.com>"]
description = "A minimal, modular TriCore interpreter scaffold in Rust"
repository = "https://example.com/your/repo"


[dependencies]
thiserror = "1"
bitflags = "2"
bitvec = "1"
num-traits = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[dev-dependencies]
pretty_assertions = "1"