[package]
name = "tricore-disasm-gui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Iced-based GUI for TriCore disassembler"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
iced = { version = "0.10", features = ["tokio", "canvas"] }
tokio = { version = "1", features = ["rt", "macros"] }
tricore-disasm = { path = "../tricore-disasm" }
tricore-rs = { path = "../../" }

