[package]
name = "tricore-disasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TriCore disassembler CLI (reuses tricore-rs core)"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tricore-rs = { path = "../../" }

#[dev-dependencies]
